[gd_scene format=3 uid="uid://dqc27mfxgppk"]

[ext_resource type="Script" uid="uid://b2h5ktwi7nkt1" path="res://Scripts/evil_otto.gd" id="1_7bjh5"]
[ext_resource type="Material" uid="uid://786upk8rbxya" path="res://Materials/SetColor.tres" id="2_f5oq8"]
[ext_resource type="Texture2D" uid="uid://bocwsj8kkahip" path="res://Assets/Art/Otto-full.png" id="2_yw4ir"]
[ext_resource type="AudioStream" uid="uid://dy7ooc5du87g7" path="res://Assets/Audio/IntruderAlert.wav" id="5_xqfkb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdk81"]
size = Vector2(8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqfkb"]
atlas = ExtResource("2_yw4ir")
region = Rect2(0, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wiaa"]
atlas = ExtResource("2_yw4ir")
region = Rect2(9, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5hnu"]
atlas = ExtResource("2_yw4ir")
region = Rect2(18, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycp4k"]
atlas = ExtResource("2_yw4ir")
region = Rect2(27, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_24hqi"]
atlas = ExtResource("2_yw4ir")
region = Rect2(36, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu0rk"]
atlas = ExtResource("2_yw4ir")
region = Rect2(45, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_78odd"]
atlas = ExtResource("2_yw4ir")
region = Rect2(36, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y4ca"]
atlas = ExtResource("2_yw4ir")
region = Rect2(27, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gexvc"]
atlas = ExtResource("2_yw4ir")
region = Rect2(18, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgx8h"]
atlas = ExtResource("2_yw4ir")
region = Rect2(9, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u8hg"]
atlas = ExtResource("2_yw4ir")
region = Rect2(0, 40, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bjh5"]
atlas = ExtResource("2_yw4ir")
region = Rect2(0, 41, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5oq8"]
atlas = ExtResource("2_yw4ir")
region = Rect2(9, 41, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_et0mb"]
atlas = ExtResource("2_yw4ir")
region = Rect2(18, 41, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxij2"]
atlas = ExtResource("2_yw4ir")
region = Rect2(27, 41, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pucp3"]
atlas = ExtResource("2_yw4ir")
region = Rect2(36, 41, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfpt6"]
atlas = ExtResource("2_yw4ir")
region = Rect2(45, 41, 8, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_isvp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqfkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wiaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5hnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24hqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu0rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78odd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y4ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gexvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgx8h")
}],
"loop": true,
"name": &"Bounce",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u8hg")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bjh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5oq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et0mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxij2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pucp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfpt6")
}],
"loop": false,
"name": &"Spawn",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f5oq8"]
radius = 4.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5wiaa"]
random_pitch = 1.0644932
streams_count = 1
stream_0/stream = ExtResource("5_xqfkb")

[node name="EvilOtto" type="CharacterBody2D" unique_id=1787455862]
scale = Vector2(4, 4)
collision_layer = 0
script = ExtResource("1_7bjh5")

[node name="CollisionSprite" type="CollisionShape2D" parent="." unique_id=1783814821]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_rdk81")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2112435508]
material = ExtResource("2_f5oq8")
position = Vector2(0, -20)
sprite_frames = SubResource("SpriteFrames_isvp7")
animation = &"Bounce"
autoplay = "Spawn"
metadata/_edit_lock_ = true

[node name="OttoTrigger" type="Area2D" parent="." unique_id=277538635]
collision_layer = 3
collision_mask = 24

[node name="CollisionOtto" type="CollisionShape2D" parent="OttoTrigger" unique_id=683332692]
position = Vector2(0, -2.5)
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_f5oq8")

[node name="TimerOttoSpawn" type="Timer" parent="." unique_id=1515432853]
wait_time = 10.0
one_shot = true

[node name="IntruderAlert" type="AudioStreamPlayer" parent="." unique_id=1931474571]
stream = SubResource("AudioStreamRandomizer_5wiaa")
